--- a/videopuzzle/videopuzzle.csproj
+++ b/videopuzzle/videopuzzle.csproj
@@ -116,6 +116,7 @@
     <Content Include="Assets\ApplicationIcon.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Assets\Images\feature.camera.png" />
     <Content Include="Assets\Images\new.png" />
     <Content Include="Assets\Images\next.png" />
     <Content Include="Assets\Images\refresh.png" />
