--- a/videopuzzle/videopuzzle.csproj
+++ b/videopuzzle/videopuzzle.csproj
@@ -77,6 +77,7 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="PlayMode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PuzzleBoard.cs" />
     <Compile Include="Resources\AppResources.Designer.cs">
