--- a/videopuzzle/videopuzzle.csproj
+++ b/videopuzzle/videopuzzle.csproj
@@ -106,6 +106,11 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\Images\Offline\0002.jpg" />
+    <Content Include="Assets\Images\Offline\0003.jpg" />
+    <Content Include="Assets\Images\Offline\0004.jpg" />
+    <Content Include="Assets\Images\Offline\0005.jpg" />
+    <Content Include="Assets\Images\Offline\0006.jpg" />
     <Content Include="Fonts\Digit.TTF">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -124,7 +129,7 @@
     <Content Include="Assets\Images\new.png" />
     <Content Include="Assets\Images\next.png" />
     <Content Include="Assets\Images\refresh.png" />
-    <Content Include="Assets\Images\test-image.jpg" />
+    <Content Include="Assets\Images\Offline\0001.jpg" />
     <Content Include="Assets\Tiles\FlipCycleTileLarge.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
