Created TileManager for tile updates

--- a/videopuzzle/videopuzzle.csproj
+++ b/videopuzzle/videopuzzle.csproj
@@ -90,6 +90,7 @@
       <DependentUpon>Settings.xaml</DependentUpon>
     </Compile>
     <Compile Include="Square.cs" />
+    <Compile Include="TileManager.cs" />
     <Compile Include="VideoPuzzleException.cs" />
   </ItemGroup>
   <ItemGroup>
