--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,6 @@ Generated_Code #added for RIA/Silverlight projects
 _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
+
+# API configuration is in App.xaml.cs
+App.xaml.cs
