Tried to create custom live tile
Added CustomTileControl. Creating custom tile doesn't work as the image
is rendered black.

--- a/videopuzzle/videopuzzle.csproj
+++ b/videopuzzle/videopuzzle.csproj
@@ -74,6 +74,9 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="CustomTileControl.xaml.cs">
+      <DependentUpon>CustomTileControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="HighScore.cs" />
     <Compile Include="LocalizedStrings.cs" />
     <Compile Include="MainPage.xaml.cs">
@@ -99,6 +102,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </ApplicationDefinition>
+    <Page Include="CustomTileControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
